--- a/.github/workflows/test-and-deploy.yml
+++ b/.github/workflows/test-and-deploy.yml
@@ -5,8 +5,12 @@ on:
     branches:
       - main
 
+  workflow_dispatch:
+
 permissions:
   contents: write  # Nutné pro push do větve gh-pages
+  pages: write
+  id-token: write
 
 jobs:
   build-and-deploy:
@@ -27,9 +31,15 @@ jobs:
       - name: Run tests
         run: npm test
 
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v3
-        if: success()  # deploy only if tests pass
+      - name: Checkout
+        uses: actions/checkout@v4
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          # Upload entire repository
+          path: '.'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
